--- a/main.html
+++ b/main.html
@@ -39,9 +39,18 @@
 </head>
 
 <body>
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
+    <!-- Templates for general use, not displayed -->
+    <template id="hikeCardTemplate">
+        <div class="card py-2 mx-2" style="width: 18rem;">
+            <img class="card-image card-img-top" src=" ..." alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a class="btn btn-primary card-href">Get Details</a>
+            </div>
+        </div>
+    </template>
 
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
@@ -51,9 +60,18 @@
         <div class="container bg-light p-5">
             <h1 class="display-4">Whats up, <span id="username-here"></span></h1>
             <hr>
-            <p>Why is it always rainnnnnnnnnnnn.</p>
+            <p>Quote of the day: <span id="quote-goes-here"></span></p>
         </div>
-</div>
+    </div>
+
+    <div class="container">
+        <h1>Some popular hikes</h1>
+        <!-- Here is container for cards  -->
+        <div class="container">
+            <div id="hikes-go-here" class="row row-cols-auto">
+            </div>
+        </div>
+    </div>
     <!-- stuff -->
 
     <!-- our own footer goes here-->
